--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "@electron-forge/plugin-auto-unpack-natives": "^7.8.0",
     "@electron-forge/plugin-fuses": "^7.8.0",
     "@electron/fuses": "^1.8.0",
-    "electron": "35.1.5",
-    "electron-winstaller": "^5.4.0"
+    "electron": "^35.1.5"
   }
 }
